--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,6 @@ jobs:
         # https://github.com/JamesIves/github-pages-deploy-action
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          branch: main
           folder: out
